tests/traci/set_variable/Vehicle/ChangeTarget/InvalidEdgeId/testclient_out.traci
TraCITestClient output file. Date: Fri Aug 16 10:24:56 2019


-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SetValue>:
  domID=196 varID=49 objID=veh0
.. Answered with error to command (196), [description: Destination edge 'e_bla' is not known.]

-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
